<resources>
    <string name="app_name">Attendance Matters</string>
    <string name="tagLine">Your Presence Is Important</string>
    <string name="dev">Design And Developed By\n VIJAY KUMAR SINGH</string>
    <string name="editTextUsername">Username</string>
    <string name="editTextPassword">Password</string>
    <string name="buttonLogin">Login</string>
    <string name="textView3">New to Attendance Matters?</string>
    <string name="textViewRegisterNow">Register Now</string>
    <string-array name="spinner">
        <item>Admin</item>
        <item>Faculty</item>
        <item>Student</item>
    </string-array>
</resources>
